(fix) : (DHSC-261) fix width on mobile.

--- a/docroot/themes/custom/dhsc_theme/stories/02-molecules/menus/menu-footer.scss
+++ b/docroot/themes/custom/dhsc_theme/stories/02-molecules/menus/menu-footer.scss
@@ -1,3 +1,5 @@
 .m-menu--footer {
-  min-width: 42.125rem;
+  @media screen and (min-width: 835px) {
+    min-width: 42.125rem;
+  }
 }
